kubernetes/deployment.yml
---
# apiVersion: "v1"
# kind: "Namespace"
# metadata:
#   name: "app"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "schedule-app"
  namespace: "app"
  labels:
    app: "schedule-app"
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: "schedule-app"
  template:
    metadata:
      labels:
        app: "schedule-app"
    spec:
      containers:
      - name: "backend"
        image: "stratiiv/devops-team-green:latest"
        ports: 
        - containerPort: 8080
      - name: "redis"
        image: "redis:7-alpine"

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "schedule-app-service"
  namespace: "app"
  labels:
    app: "schedule-app"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "schedule-app"
  type: "LoadBalancer"
  loadBalancerIP: ""
