kubernetes/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-external-db
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: schedule-app
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 35.222.130.231/32
      ports:
      - protocol: TCP
        port: 5432
